--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="noa desarrollos, diseño web, desarrollo web, mantenimiento web, hosting, hospedaje">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilo.css">
+    <link rel="icon" type="image/jpg" href="img/logo.jpg">
     <title>Noa Desarrollos</title>
 </head>
 <body>
@@ -30,7 +31,7 @@
 
     </header>
 
-    <main class="container">
+    <main class="container mt-5 mb-5">
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -55,10 +56,16 @@
     </main>
     <footer>
       <div class="logo_redes">
-        <img class="logo_face" src="./img/facebook-g0d6932dcd_1280.png" alt="logo facebook">
+        <a href="https://www.facebook.com/noadesarrollos/" target="_blank">
+          <img class="logo_face" src="./img/facebook-g0d6932dcd_1280.png" alt="logo facebook">
+        </a>
+          
       </div>
       <div class="logo_redes">
-        <img class="logo_ig" src="./img/instagram-g411d26809_1280.png" alt="logo instagram">
+        <a href="https://www.instagram.com/noadesarrollos/" target="_blank">
+          <img class="logo_ig" src="./img/instagram-g411d26809_1280.png" alt="logo instagram">
+        </a>
+        
       </div>
         <h4>Todos los derechos reservados</h4>
     </footer>
