--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Estos son nuestros proyectos realizados">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="icon" type="image/jpg" href="../img/logo.jpg">
     <title>Noa Desarrollos | Proyectos</title>
 </head>
 <body>
@@ -28,15 +29,49 @@
         </nav>
 
     </header>
-    <hr>
+    <main>
+        <h1>
+            Alguno de nuestros trabajos
+        </h1>
+
+        <section class="container mt-5 mb-5">
+            <div class="row">
+                <div class="col" style="width: 18rem;">
+                    <img src="../img/web tc.jpg" class="card-img-top" alt="tc">
+                    <div class="card-body">
+                    <h5 class="Todo Catamarca">Todo Catamarca</h5>
+                    <p class="card-text">Realizamos el diseño de este sitio de difusión turística.</p>
+                    <a href="#" class="btn btn-primary">Visitar</a>
+                    </div>
+                </div>
+
+                <div class="col" style="width: 18rem;">
+                    <img src="../img/web posada.jpg" class="card-img-top" alt="wp">
+                    <div class="card-body">
+                    <h5 class="card-title">Posada Apart Alas Fuentes</h5>
+                    <p class="card-text">Sitio web diseñado para hotel.</p>
+                    <a href="#" class="btn btn-primary">Visitar</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </main>
     <footer>
         <div class="logo_redes">
+        <a href="https://www.facebook.com/noadesarrollos/" target="_blank">
             <img class="logo_face" src="../img/facebook-g0d6932dcd_1280.png" alt="logo facebook">
+        </a>
+            
         </div>
         <div class="logo_redes">
+        <a href="https://www.instagram.com/noadesarrollos/" target="_blank">
             <img class="logo_ig" src="../img/instagram-g411d26809_1280.png" alt="logo instagram">
+        </a>
+        
         </div>
-            <h4>Todos los derechos reservados</h4>
+        <h4>Todos los derechos reservados</h4>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
